--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@tanstack/react-query": "^5.14.2",
         "babel-plugin-macros": "^3.1.0",
+        "flowbite": "^2.2.1",
+        "flowbite-react": "^0.7.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.21.1",
